--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -21,7 +21,7 @@ mixin head(title)
         // Custom stylesheet - for your changes
         link(rel='stylesheet' href='css/custom.css')
         // Favicon
-        link(rel='shortcut icon' href='img/favicon.png')
+        link(rel='shortcut icon' href='img/brand/favicon-32x32.png')
         // Tweaks for older IEs
         //if lt IE 9
         script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
