--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -5,7 +5,7 @@ mixin navbar()
         .container-fluid
           .d-flex.align-items-center
             a.navbar-brand.py-1(href='/')
-              img(src='img/logo.svg' alt='Directory logo')
+              img(src='img/brand/hyde.jpg' style="width:192px" alt='Directory logo')
           button.navbar-toggler.navbar-toggler-right(type='button' data-bs-toggle='collapse' data-bs-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
             i.fa.fa-bars
           // Navbar Collapse
