--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -212,12 +212,12 @@ sup {
 }
 
 a {
-  color: #4E66F8;
+  color: #fcba03;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3e52c6;
+  color: #FFD96F;
   text-decoration: underline;
 }
 
