--- a/views/register.pug
+++ b/views/register.pug
@@ -22,7 +22,7 @@ html(lang='en')
     // Custom stylesheet - for your changes
     link(rel='stylesheet' href='css/custom.css')
     // Favicon
-    link(rel='shortcut icon' href='img/favicon.png')
+    link(rel='shortcut icon' href='img/brand/favicon-32x32.png')
     // Tweaks for older IEs
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
@@ -35,7 +35,7 @@ html(lang='en')
         .col-md-8.col-lg-6.col-xl-5.d-flex.align-items-center
           .w-100.py-5.px-md-5.px-xxl-6.position-relative
             .mb-4
-              img.img-fluid.mb-4(src='img/logo-square.svg' alt='...' style='max-width: 4rem;')
+              img.img-fluid.mb-4(src='img/brand/hyde.jpg' alt='...' style='max-width: 192px;')
               if(checkout)
                 h2 Register to make a booking
               else
