fix some styling

--- a/views/adminProperty.pug
+++ b/views/adminProperty.pug
@@ -63,7 +63,7 @@ html(lang='en')
                                                         label.form-label Guests
                                                         .d-flex.align-items-center
                                                             .btn.btn-items.btn-items-decrease -
-                                                            input#guests.form-control.input-items(type='text' value=property.bathrooms disabled='')
+                                                            input#guests.form-control.input-items(type='text' value=property.guests disabled='')
                                                             .btn.btn-items.btn-items-increase +
                                     .text-block
                                         .row.mb-3
