--- a/views/adminSearchProperty.pug
+++ b/views/adminSearchProperty.pug
@@ -106,6 +106,8 @@ html(lang='en')
                                             p.text-sm.fw-bold #{result.bathrooms} 
                                             h6.label-heading Bedrooms 
                                             p.text-sm.fw-bold.mb-0 #{result.bedrooms}
+                                            h6.label-heading Beds 
+                                            p.text-sm.fw-bold.mb-0 #{result.beds}
             
     // Footer
     footer.position-relative.z-index-10.d-print-none
