--- a/views/propertyAvailability.pug
+++ b/views/propertyAvailability.pug
@@ -19,7 +19,8 @@ html(lang='en')
                     li.breadcrumb-item.active #{property.name} Availability
                 h1.hero-heading.mb-0 #{property.name} Availability
                 input(id="bookings" value=bookings style="display:none")
-
+                input(id="advanceNoticeFrom" value=advanceNoticeFrom style="display:none")
+                input(id="advanceNoticeTo" value=advanceNoticeTo style="display:none")
                 //- p.text-muted.mb-5 Manage your Personal info and settings here.
                 .row
                     .col-lg-12.mb-5.mb-lg-0
