--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -721,7 +721,7 @@ A HORIZONTAL event
 }
 .fc .fc-daygrid-day-top {
     display: flex;
-    flex-direction: row-reverse;
+    /* flex-direction: row-reverse; */
   }
 .fc .fc-day-other .fc-daygrid-day-top {
     opacity: 0.3;
