--- a/views/adminProperty.pug
+++ b/views/adminProperty.pug
@@ -43,23 +43,31 @@ html(lang='en')
                                         .row
                                             .col-lg-4
                                                 h4 Bedrooms, Bathrooms, Guests
-                                                p.text-muted.text-sm
+                                                //- p.text-muted.text-sm
                                                     | The number of bedrooms and bathrooms the property has
-                                            .col-lg-7.ms-auto
+                                        .row
+                                            .col-lg-12.ms-auto
                                                 .row
-                                                    .col-lg-4
+                                                    .col-lg-3
                                                         label.form-label Bedrooms
                                                         .d-flex.align-items-center
                                                             .btn.btn-items.btn-items-decrease -
                                                             input#bedrooms.form-control.input-items(type='text' value=property.bedrooms disabled='')
                                                             .btn.btn-items.btn-items-increase +
-                                                    .col-lg-4
+                                                    .col-lg-3
+                                                        label.form-label Beds
+                                                        .d-flex.align-items-center
+                                                            .btn.btn-items.btn-items-decrease -
+                                                            input#beds.form-control.input-items(type='text' value=property.beds disabled='')
+                                                            .btn.btn-items.btn-items-increase +
+                                                    
+                                                    .col-lg-3
                                                         label.form-label Bathrooms
                                                         .d-flex.align-items-center
                                                             .btn.btn-items.btn-items-decrease -
                                                             input#bathrooms.form-control.input-items(type='text' value=property.bathrooms disabled='')
                                                             .btn.btn-items.btn-items-increase +
-                                                    .col-lg-4
+                                                    .col-lg-3
                                                         label.form-label Guests
                                                         .d-flex.align-items-center
                                                             .btn.btn-items.btn-items-decrease -
@@ -91,6 +99,17 @@ html(lang='en')
                                                         label.form-label(for='postCode') Post Code
                                                         input#postCode.form-control(type='text' name='postCode' value=property.postCode)
 
+                                        .text-block
+                                            .row.mb-3
+                                                .col-sm-12
+                                                    h5 Advance Notice
+                                                    .row.pt-4
+                                                        label.form-label(for='advanceNotice') Number of days notice for a booking
+                                                        .d-flex.align-items-center
+                                                            .btn.btn-items.btn-items-decrease -
+                                                            input#advanceNotice.form-control.input-items(type='text' disabled='' value=property.advanceNotice)
+                                                            .btn.btn-items.btn-items-increase +
+                                        
                                         .text-block
                                             .row.mb-3
                                                 .col-sm-12
@@ -187,11 +206,19 @@ html(lang='en')
                                 .row
                                     .mb-4
                                         button.btn.btn-primary#availability See Availability           
-                                    //- .col-sm-6
-                                    //-     button.primary-btn#newRow Add New Row
-                                    //- .col-sm-6
-                                    //-     button.primary-btn#exportCalendar Export Calendar
 
+                        .row.form-block
+                            .col-lg-12
+                                h5.mb-4 Amenities
+                                input#propertyAmenities(style="display:none" value=propertyAmenities)
+                                input#noAmenities(style="display:none" value=amenities.length)
+                                .row
+                                    each amenity, index in amenities
+                                        .col-lg-4
+                                            .mb-4
+                                                .form-check
+                                                    input.form-check-input(type='checkbox' data-name=amenity.name data-id=amenity.id id='amenity'+ index)
+                                                    label.form-check-label(for='amenity'+ index) #{amenity.name} 
                                 
                         .row.form-block
                             .col-lg-12
