--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -22,7 +22,7 @@ mixin navbar()
                 li.nav-item
                   a.nav-link(href='/') Home
                 li.nav-item
-                  a.nav-link(href='/properties?cityId=1') Places
+                  a.nav-link(href='/properties?cityId=1') Places to Stay
                 li.nav-item
                     a.nav-link(href='/register') Register
                 li.nav-item
