fix advance notice on property screen

--- a/views/property.pug
+++ b/views/property.pug
@@ -11,6 +11,7 @@ html(lang='en')
       input#longitude(style="display:none" value=longitude)
       input#latitude(style="display:none" value=latitude)
       input#property(style="display:none" value=property.id)
+      input#advanceNoticeDates(style="display:none" value=advanceNoticeDates)
       input#propertyAvailabilityDates(style="display:none" value=propertyAvailabilityDates)
       // Slider main container
       .swiper-container.detail-slider.slider-gallery
