--- a/views/addProperty.pug
+++ b/views/addProperty.pug
@@ -3,8 +3,13 @@ html(lang='en')
     include common/header.pug 
     +head("Add Property")
     body(style='padding-top: 72px;')
+        #overlay
         include common/navbar.pug 
         +navbar(user)
+        
+        .progress.rounded-0.sticky-top#progressBar(style='height: 10px; top: 72px;display:none')
+            .progress-bar#progress(role='progressbar' style='width: 0%' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100')
+    
         section.py-5
             input(id="property" style="display:none" value=property)
                       
